<resources>
    <string name="app_name">Find My Phone By Clap</string>
    <string name="clap_to_find_your_phone">Clap to find your phone</string>
    <string name="flashlight_to_on_in_dark">Flashlight to on in dark</string>
    <string name="what_are_you_waiting_for">What are you waiting for?</string>
    <string name="get_started">Get Started</string>
    <string name="continuee">Continue</string>
    <string name="cat_meowing">Cat meowing</string>
    <string name="dog_barking">Dog barking</string>
    <string name="hye_stay_here">Hey stay here</string>
    <string name="whistle">Whistle</string>
    <string name="hello">Hello</string>
    <string name="car_honk">Car honk</string>
    <string name="door_bell">Door bell</string>
    <string name="party_horn">Party horn</string>
    <string name="tap_active">Activate</string>
    <string name="tap_deactive">Deactivate</string>
    <string name="police_whistle">Police whistle</string>
    <string name="english_default">English (Default)</string>
    <string name="select_lanuages">Select Languages</string>
    <string name="find_your_phone">Find your phone</string>
    <string name="sound_sensitivity">Sound Sensitivity</string>
    <string name="to_find_the_lost_phone_easily">To find the lost phone easily</string>
    <string name="Go_app_to_experience_it">Go to the app to experience it!</string>
    <string name="sound_active">Sound Active</string>
    <string name="volume">Volume</string>
    <string name="duration">Duration</string>
    <string name="_15s">15 s</string>
    <string name="_30_s">30 s</string>
    <string name="_1_m">1 m</string>
    <string name="_2_m">2 m</string>
    <string name="loop">loop</string>
    <string name="apply">Apply</string>
    <string name="flash_light">Flash light</string>
    <string name="vibrate">Vibrate</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_us">Rate Us</string>
    <string name="feedback">Feedback</string>
    <string name="exit">Exit</string>


    <string name="settings">Settings</string>
    <string name="defaultt">Default</string>
    <string name="disco_mode">Disco Mode</string>
    <string name="sos_mode">SOS Mode</string>
    <string name="heartbeat">Heartbeat</string>
    <string name="strong_vibration">Strong Vibration</string>
    <string name="ticktock">Ticktock</string>
    <string name="permission">Permission</string>
    <string name="following_permissions_are_required">Following permissions are required</string>
    <string name="to_provide_you_with_the_best_experience_and_also_needs_following_permissions">To provide you with the best experience and also needs following permissions.</string>
    <string name="allow_access_for_voice_recording">Allow access for voice recording</string>
    <string name="allow_access_for_flashlight">Allow access for flashlight.</string>
    <string name="allow">Allow</string>
    <string name="cancel">Cancel</string>
    <string name="cavalry">Cavalry</string>
    <string name="more_apps">More Apps</string>
</resources>