<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInterface.Permissions">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/permission"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:fontFamily="@font/poppins"
        android:text="@string/following_permissions_are_required"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/to_provide_you_with_the_best_experience_and_also_needs_following_permissions"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_margin="@dimen/_10sdp"
        android:layout_height="@dimen/_200sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView5"
            android:backgroundTint="@color/white1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_margin="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/mic" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_5sdp"
                android:fontFamily="@font/poppins"
                android:text="@string/allow_access_for_voice_recording"
                android:textColor="@color/black1"
                android:textSize="@dimen/_12sdp" />

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView6"
            android:layout_width="match_parent"
            android:backgroundTint="@color/white1"
            android:layout_height="@dimen/_50sdp"
            android:layout_margin="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView5">


            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/camera" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/allow_access_for_flashlight"
                android:textColor="@color/black1"
                android:textSize="@dimen/_12sdp" />

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/allow"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_margin="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            android:backgroundTint="@color/appcolor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView6">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins"
                android:text="@string/allow"
                android:textColor="@color/white1"
                android:textSize="@dimen/_14sdp" />

        </androidx.cardview.widget.CardView>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>