<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInterface.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/ivmenu"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/baseline_menu_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/find_your_phone"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/settings"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/setting"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black" />



        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/start"
            android:visibility="visible"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_140sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:lottie_fileName="circle.json" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/stop"
            android:visibility="invisible"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_140sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:lottie_fileName="circlered.json" />

        <TextView
            android:id="@+id/activetext"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/tap_active"
            android:gravity="center"
            android:textColor="@color/white1"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="@+id/start"
            app:layout_constraintEnd_toEndOf="@+id/start"
            app:layout_constraintStart_toStartOf="@+id/start"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:layout_margin="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_5sdp"
            android:backgroundTint="@color/cardcolor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:fontFamily="@font/poppins"
                android:text="@string/sound_sensitivity"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />


            <com.warkiz.widget.IndicatorSeekBar
                android:id="@+id/soundsensitivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:isb_indicator_color="@android:color/transparent"
                app:isb_indicator_text_color="@android:color/transparent"
                app:isb_indicator_text_size="18sp"
                app:isb_max="330"
                app:isb_min="220"
                app:isb_only_thumb_draggable="false"
                app:isb_progress="300"
                app:isb_seek_smoothly="true"
                app:isb_show_indicator="rounded_rectangle"
                app:isb_show_tick_mark_type="oval"
                app:isb_show_tick_text="false"
                app:isb_thumb_color="@color/appcolor"
                app:isb_thumb_size="15dp"
                app:isb_tick_count="5"
                app:isb_tick_mark_color="@color/appcolor"
                app:isb_tick_mark_size="10dp"
                app:isb_tick_text_size="15sp"
                app:isb_track_background_color="@color/grey"
                app:isb_track_background_size="2dp"
                app:isb_track_progress_color="@color/appcolor"
                app:isb_track_progress_size="4dp"
                app:layout_constraintBottom_toBottomOf="@+id/cardView2"
                app:layout_constraintTop_toTopOf="@+id/cardView2" />

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="bottom"
                android:layout_margin="@dimen/_5sdp"
                android:max="100"
                android:min="50"
                android:thumbTint="@color/appcolor"
                android:visibility="gone" />

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view1"
        android:background="@color/white1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:itemIconSize="@dimen/_30sdp">

        <include
            android:id="@+id/menu"
            layout="@layout/menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>